# Proyectos

./: .gitignore  numprimos.py  prueba.py
EjecicioB/: FizzBuzz.py
EjercicioA/: Calculadora.py
EjercicioC/: Analisis.py  Datos.csv
Interfaz_grafica/: notas.py
analisis_ventas/: analisis.py  ventas.csv
analisis_ventas/Informe/: Informe.html
contador_palabras/: contador.py  pendiente.txt
gestor_tareas/: run.py
gestor_tareas/app/: __init__.py  routes.py  task_store.py
gestor_tareas/app/templates/: index.html
organizador_archivos/: organizar.py  pyproject.toml
organizador_archivos/organizador_archivos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
