[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "organizador-archivos"
version = "0.1.0"
description = "Clasifica archivos por extensión en subcarpetas"
requires-python = ">=3.10"

[project.scripts]
organizar-archivos = "organizar:main"

[tool.setuptools]
py-modules = ["organizar"]
